@startuml

title __FRAGMENT's Class Diagram__\n

  namespace com.mad.p03.np2020.routine {
    namespace Fragment {
      class com.mad.p03.np2020.routine.Fragment.HistoryFragment {
          {static} - FOCUS_DATABASE : String
          - TAG : String
          {static} - USER_GET : String
          {static} - VERTICAL_ITEM_SPACE : int
          - buttonFragment : ImageButton
          - completion : TextView
          - nothing : ImageView
          - textFragment : TextView
          + HistoryFragment()
          {static} + newInstance()
          + onAttach()
          + onCreate()
          + onCreateView()
          + onDetach()
          - initialisation()
          - sendBack()
          - updateTask()
      }
    }
  }
  

  namespace com.mad.p03.np2020.routine {
    namespace Fragment {
      interface com.mad.p03.np2020.routine.Fragment.HistoryFragment.OnFragmentInteractionListener {
          {abstract} + onFragmentInteraction()
      }
    }
  }
  

  namespace com.mad.p03.np2020.routine {
    namespace Fragment {
      class com.mad.p03.np2020.routine.Fragment.NotesFragment {
          + NotesFragment()
          {static} + newInstance()
          + onCreate()
          + onCreateView()
      }
    }
  }
  

  namespace com.mad.p03.np2020.routine {
    namespace Fragment {
      class com.mad.p03.np2020.routine.Fragment.StepsFragment {
          ~ TAG : String
          ~ recyclerView : RecyclerView
          ~ stepAddButton : Button
          ~ stepList : ArrayList<String>
          ~ stepName : EditText
          ~ view : View
          + StepsFragment()
          {static} + newInstance()
          + onCreate()
          + onCreateView()
      }
    }
  }
  

  com.mad.p03.np2020.routine.Fragment.HistoryFragment -up-|> androidx.fragment.app.Fragment
  com.mad.p03.np2020.routine.Fragment.HistoryFragment o-- com.mad.p03.np2020.routine.database.FocusDBHelper : focusDBHelper
  com.mad.p03.np2020.routine.Fragment.HistoryFragment o-- com.mad.p03.np2020.routine.Fragment.HistoryFragment.OnFragmentInteractionListener : mListener
  com.mad.p03.np2020.routine.Fragment.HistoryFragment o-- com.mad.p03.np2020.routine.Class.User : user
  com.mad.p03.np2020.routine.Fragment.HistoryFragment +-down- com.mad.p03.np2020.routine.Fragment.HistoryFragment.OnFragmentInteractionListener
  com.mad.p03.np2020.routine.Fragment.NotesFragment -up-|> androidx.fragment.app.Fragment
  com.mad.p03.np2020.routine.Fragment.NotesFragment o-- com.mad.p03.np2020.routine.Class.Task : mTask
  com.mad.p03.np2020.routine.Fragment.StepsFragment -up-|> androidx.fragment.app.Fragment
  com.mad.p03.np2020.routine.Fragment.StepsFragment o-- com.mad.p03.np2020.routine.Adapter.CardAdapter : cardAdapter


right footer


PlantUML diagram generated by SketchIt! (https://bitbucket.org/pmesmeur/sketch.it)
For more information about this tool, please contact philippe.mesmeur@gmail.com
endfooter

@enduml
